src/components/Footer/Footer.scss
@use '../../variables/rc';

.footer {
  position: relative;
  display: flex;
  flex-direction: row;
  overflow-x: hidden;

  .groundImg {
    width: 192px;
    margin-top: 6rem;
    display: block;
  }

  .more-btn {
    position: absolute;
    top: 48px;
    left: calc((100vw - 109px) / 2);
    transition: transform 0.25s ease;

    p {
      position: absolute;
      top: 20px;
      left: 12px;
      color: white;
      font-size: 1.15rem;
      transition: transform 0.25s ease;
    }

    img {
      width: 104px;
    }

    &:hover {
      cursor: pointer;
      transform: scale(1.05);

      p {
        transform: scale(1.05);
      }
    }
  }

  .github {
    position: absolute;
    top: 157px;
    left: 32px;
    background-color: rgba($color: #fff, $alpha: 0.4);
    padding: 0.3rem;
    clip-path: rc.$rc;
    transition: transform 0.25s ease;

    a {
      display: flex;
    }

    img {
      width: 32px;
      transition: transform 0.25s ease;
    }

    &:hover {
      cursor: pointer;
      transform: scale(1.05);

      img {
        transform: scale(1.05);
      }
    }
  }

  .footerText {
    position: absolute;
    top: 164px;
    right: 32px;
    font-size: 1.5rem;
    background-color: rgba($color: #fff, $alpha: 0.4);
    padding: 0 0.5rem;
    clip-path: rc.$rc;
  }
}

@media (max-width: 570px) {
  .footer .footerText {
    font-size: 1.2rem;
    margin-top: 0.4rem;
  }

  .footer .github {
    margin-top: 0.45rem;

    img {
      width: 27px;
      padding-bottom: 0.01rem;
    }
  }
}

@media (max-width: 470px) {
  .footer .footerText {
    font-size: 1rem;
    margin-top: 0.4rem;
  }

  .footer .github {
    margin-top: 0.7rem;

    img {
      width: 16px;
      padding-bottom: 0.01rem;
    }
  }
}

@media (max-width: 400px) {
  .footer .footerText {
    font-size: 0.8rem;
    margin-top: 0.4rem;
  }

  .footer .github {
    margin-top: 0.7rem;

    img {
      width: 13px;
      padding-bottom: 0.01rem;
    }
  }
}

